updated CSS topic of course classes

--- a/02-CSS/clase31-Combinadores/index.html
+++ b/02-CSS/clase31-Combinadores/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Combinadores - General Sibling</title>
+    <link rel="stylesheet" href="./style-general-sibling.css" />
   </head>
   <body>
     <div>
@@ -13,7 +13,10 @@
       <h2>soy un h2</h2>
       <h3>soy un h3</h3>
       <p>soy un p</p>
-      <p>soy un p</p>
+      <div>
+        <p>soy otro p dentro de un div</p>
+      </div>
+      <p>soy otro p</p>
     </div>
   </body>
 </html>
