--- a/02-CSS/clase32-Combinadores/index.html
+++ b/02-CSS/clase32-Combinadores/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="./style-child.css" /> -->
-    <link rel="stylesheet" href="./style-descendant.css" />
+    <title>Combinadores - Hijo y Descenciente</title>
+    <link rel="stylesheet" href="./style-child.css" />
+    <!-- <link rel="stylesheet" href="./style-descendant.css" /> -->
   </head>
   <body>
     <div>
