--- a/02-CSS/clase38-Display/1-inline-block/index.html
+++ b/02-CSS/clase38-Display/1-inline-block/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Display - inline-block</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div class="block-element">Esta es una etiqueta div</div>
     <p class="block-element">Esta es una etiqueta de parrafo</p>
     <div class="block-element">
-      <p class="parrafo">Soy texto</p>
-      <p class="parrafo">Soy texto</p>
-      <p class="parrafo">Soy texto</p>
+      <p class="parrafo">Soy texto 1</p>
+      <p class="parrafo">Soy texto 2</p>
+      <p class="parrafo">Soy texto 3</p>
     </div>
     <span>Soy una etiqueta span</span>
     <span>Soy una etiqueta span</span>
