--- a/02-CSS/clase25-ModeloCaja/index.html
+++ b/02-CSS/clase25-ModeloCaja/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=
-  , initial-scale=1.0"
+      content="width=device-width, initial-scale=1.0"
     />
     <title>Modelo de caja</title>
     <link rel="stylesheet" href="./style.css" />
