--- a/02-CSS/clase30-Combinadores/index.html
+++ b/02-CSS/clase30-Combinadores/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Combinadores - Adjacent Sibling</title>
+    <link rel="stylesheet" href="./style-adjacent-sibling.css" />
   </head>
   <body>
     <div>
@@ -14,7 +14,8 @@
       <h3>soy un h3</h3>
       <p>soy un p</p>
       <h2>soy un h2</h2>
-      <p>soy un p</p>      
+      <p>soy un p</p>
+      <p>soy otro p</p>     
     </div>
   </body>
 </html>
