--- a/02-CSS/clase33-Medidas/4-minMax/index.html
+++ b/02-CSS/clase33-Medidas/4-minMax/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Medidas - min-width / max-width</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
